Updated the views:  - show, index display readable names over ids  - forms user select drop-downs instead of number fields  - task and comment forms take story ids, return to story after    create/update
NOTE: Didn't update tests...too fat.

--- a/app/views/attached_copies/index.html.erb
+++ b/app/views/attached_copies/index.html.erb
@@ -12,7 +12,7 @@
 <% @attached_copies.each do |attached_copy| %>
   <tr>
     <td><%= attached_copy.content %></td>
-    <td><%= attached_copy.story_id %></td>
+    <td><%= attached_copy.story.try(:name) %></td>
     <td><%= link_to 'Show', attached_copy %></td>
     <td><%= link_to 'Edit', edit_attached_copy_path(attached_copy) %></td>
     <td><%= link_to 'Destroy', attached_copy, :confirm => 'Are you sure?', :method => :delete %></td>
