--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -17,11 +17,19 @@
   </div>
   <div class="field">
     <%= f.label :user_id %><br />
-    <%= f.number_field :user_id %>
+    <%= f.select :user_id,
+    options_from_collection_for_select(
+    User.all, "id", "name", @comment.user_id),
+    { include_blank: "[pick user]" } %>
+
   </div>
   <div class="field">
     <%= f.label :story_id %><br />
-    <%= f.number_field :story_id %>
+    <%= f.select :story_id,
+    options_from_collection_for_select(
+    Story.all, "id", "name", @comment.story_id),
+    { include_blank: "[pick story]" } %>
+
   </div>
   <div class="actions">
     <%= f.submit %>
