--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -13,8 +13,8 @@
 <% @comments.each do |comment| %>
   <tr>
     <td><%= comment.body %></td>
-    <td><%= comment.user_id %></td>
-    <td><%= comment.story_id %></td>
+    <td><%= comment.user.try(:name) %></td>
+    <td><%= comment.story.try(:name) %></td>
     <td><%= link_to 'Show', comment %></td>
     <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
     <td><%= link_to 'Destroy', comment, :confirm => 'Are you sure?', :method => :delete %></td>
