--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -15,8 +15,8 @@
   <tr>
     <td><%= story.name %></td>
     <td><%= story.description %></td>
-    <td><%= story.project_id %></td>
-    <td><%= story.state_id %></td>
+    <td><%= story.project.try(:name) %></td>
+    <td><%= story.state.try(:name) %></td>
     <td><%= link_to 'Show', story %></td>
     <td><%= link_to 'Edit', edit_story_path(story) %></td>
     <td><%= link_to 'Destroy', story, :confirm => 'Are you sure?', :method => :delete %></td>
